+jest stuff; M .gitignore: preserve jest js stuff; M package.json: + jest, +scripts for tests

--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "scripts": {
     "probe_tools": "tsc -help",
     "xprobe_tools": "node run probe_tools && jq --version",
-    
     "clean": "rm -rf build/*",
     "build": "tsc --project tsconfig.json",
-
     "build_server": "tsc src/server.ts --outDir build",
     "xbuild_server": "tsc src/server.ts --outDir $(tsc --project tsconfig.json --showConfig | jq -r '.compilerOptions.outDir')",
-
     "build_client": "tsc src/client.ts --outDir build",
     "xbuild_client": "tsc src/client.ts --outDir $(tsc --project tsconfig.json --showConfig | jq -r '.compilerOptions.outDir')",
-    
-    "server":"node build/server.js",
-    "client":"node build/client.js"
+    "server": "node build/server.js",
+    "client": "node build/client.js",
+    "init_test_env": "npm install --save-dev jest ts-jest @types/jest && npx ts-jest config:init",
+    "build_tests": "npm run clean_tests && tsc src/tests/* --outDir build ## for now running tests on js rather than ts",
+    "probe_test_tools": "npx jest --version && npx ts-jest --version && which which",
+    "clean_tests": "rm -rf build/tests/*",
+    "test": "npx jest --runInBand build/tests # TODO alloc safe ports pool to be able to run several servers at once"
   },
   "keywords": [],
   "author": "alu_al1",
@@ -27,6 +28,9 @@
     "ws": "8.18.1"
   },
   "devDependencies": {
-    "@types/ws": "8.18.1"
+    "@types/jest": "^29.5.14",
+    "@types/ws": "8.18.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2"
   }
 }
