--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "ws": "8.18.1"
   },
   "devDependencies": {
-    "@types/jest": "29.5.14",
-    "@types/ws": "8.18.1",
-    "jest": "29.7.0",
-    "ts-jest": "29.3.2"
+    "@types/ws": "8.18.1"
   }
 }
